// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndexHelp /> renders a banner 1`] = `
" _____ _____ _____ _____ _____
| __  |     |     |   __|_   _|
| __ -|  |  |  |  |__   | | |
|_____|_____|_____|_____| |_|

Boost v1.2.3 [90mboost[39m
"
`;

exports[`<IndexHelp /> renders a footer 1`] = `
"
Boost v1.2.3 [90mboost[39m

Powered by Boost CLI v1.2.3
"
`;

exports[`<IndexHelp /> renders a header 1`] = `
"
Boost v1.2.3 [90mboost[39m

For more information, see https://github.com/milesj/boost
"
`;

exports[`<IndexHelp /> renders children 1`] = `
"
Boost v1.2.3 [90mboost[39m

[1m[47m[30m TEST [39m[49m[22m

 I am a command that does cool things.

[1m[47m[30m USAGE [39m[49m[22m

 $ ink foo bar

[1m[47m[30m PARAMS [39m[49m[22m

 0 [90mstring[39m     Complex param with many tags. [90m[deprecated, required][39m
 path [90mstring[39m  This is a string param thats required. [90m[required][39m
 ms [90mnumber[39m    And this a number param with a label.
 3 [90mboolean[39m    And finally a boolean param. [90m[deprecated][39m

[1m[47m[30m COMMANDS [39m[49m[22m

 barbar         This is a deprecated command with no params. [90m[deprecated][39m
 foo [90msrc[39m [90m[dst][39m  This is a normal command with params.

[1m[47m[30m OPTIONS [39m[49m[22m

     --deprecatedFlag                        A deprecated flag. [90m[deprecated][39m
     --deprecatedStringWithALongName [90mstring[39m  Deprecated string option with
                                             custom label. [90m[deprecated][39m
     --flag                                  Standard boolean option.
     --num [90mnumber[39m                            Standard number option.
 -C, --numberCountable [90mnumber[39m                Number option that increments a
                                             count for each occurence. (default:
                                              10) [90m[counter][39m
 -n, --numberFixedList [90mnumber[39m                A list of numbers to choose from.
                                             (choices: 1, 2, 3, 4, 5, 6, 7, 8,
                                             9, 10) [90m[deprecated][39m
     --numWithArity [90mnumber[][39m                 A multiple number option that
                                             requires an exact number of values.
                                              [90m[multiple(10)][39m
     --str [90mstring[39m                            Standard string option.
 -s, --stringChoices [90mstring[39m                  Choice list with strings. (choices:
                                              \\"foo\\", \\"bar\\" (default), \\"baz\\")
                                             (default: \\"bar\\")
 -S, --strList [90mstring[][39m                      String option list. [90m[multiple][39m
 -t, --no-truthyBool                         Flag that is on by default, so name
                                              should be negated. (default: true)
"
`;

exports[`<IndexHelp /> renders with base props 1`] = `
"
Boost v1.2.3 [90mboost[39m
"
`;

exports[`<IndexHelp /> renders with everything 1`] = `
" _____ _____ _____ _____ _____
| __  |     |     |   __|_   _|
| __ -|  |  |  |  |__   | | |
|_____|_____|_____|_____| |_|

Boost v1.2.3 [90mboost[39m

For more information, see https://github.com/milesj/boost

[1m[47m[30m TEST [39m[49m[22m

 I am a command that does cool things.

[1m[47m[30m USAGE [39m[49m[22m

 $ ink foo bar

[1m[47m[30m COMMANDS [39m[49m[22m

 barbar         This is a deprecated command with no params. [90m[deprecated][39m
 foo [90msrc[39m [90m[dst][39m  This is a normal command with params.

Powered by Boost CLI v1.2.3
"
`;
